# print3r

./: .gitignore  README.md  docker-compose.yml
db/: init.sql
server/: .env  Cargo.toml
server/migrations/: 20210117182957_schema.sql
server/src/: main.rs
server/src/auth/: authentication.rs  middleware.rs  mod.rs
server/src/config/: mod.rs
server/src/entities/: comments.rs  files.rs  images.rs  mod.rs  posts.rs  prelude.rs  tags.rs  users.rs
server/src/errors/: mod.rs
server/src/handlers/: auth.rs  comments.rs  mod.rs  posts.rs  tags.rs  users.rs
server/src/models/: file.rs  mod.rs  project.rs  tag.rs  user.rs
web/: package-lock.json  package.json
web/src/app/: app-routing.module.ts  app.component.html  app.module.ts
web/src/app/components/login-button/: login-button.component.html  login-button.component.ts
web/src/app/guards/: auth.guard.ts
