[package]
name = "server"
version = "0.1.0"
authors = ["alex <abrackx@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.5"
tokio = { version = "0.2", features = ["time"] }
actix-service = "1.0.6"
actix-multipart = "0.3"
futures = "0.3.8"
sqlx = { version = "0.5.1", features = [ "postgres", "runtime-actix-native-tls", "chrono" ] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }
env_logger = "0.8.2"
log = "0.4.11"
jsonwebtoken = "7.2.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0.20"
anyhow = "1.0.32"
sanitize-filename = "0.3.0"
sea-orm = { version = "0.1.3", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ], default-features = false }
rand = "0.8.4"
regex = "1.5.4"
base64 = "0.13.0"
sha2 = "0.9.6"